--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -10,22 +10,23 @@
     border-top: solid lightgrey 2px;
     box-shadow: 0px -10px 5px -5px rgb(192, 192, 193);
     border-radius: 10px;
+}
 
-    & .logo {
+    .logo {
         margin-top: 30px;
         margin-bottom: 20px;
         height: 110px;
         width: 80px;
     }
 
-    & .info{
+    .info{
         font-size: 20px;
         margin-bottom: 50px;
         color:black ;
         letter-spacing: 2px; /* Espacement entre les lettres */
     }
     
-}
+
 
 @media (min-width: 992px) and (max-width: 1199px){
     .footer{ 
@@ -35,21 +36,22 @@
         width: 100%;
         height: 185px;
         margin: 30px 0px 0px 0px;
+    }
 
-        & .logo {
+    .logo {
             margin-top: 15px;
             margin-bottom: 10px;
             height: 110px;
             width: 80px;
-        }
-
-        & .info{
+    } 
+    
+    .info{
             width: 80%;
             font-size: 15px;
             text-align: center;
             letter-spacing: 3px; /* Espacement entre les lettres */
         }
-    }
+   
 }
 
 @media (min-width: 768px) and (max-width: 991px){
@@ -60,21 +62,22 @@
         width: 100%;
         height:200px;
         margin: 30px 0px 0px 0px;
+    }
 
-        & .logo {
+        .logo {
             margin-top: 5px;
             margin-bottom: 5px;
             height: 110px;
             width: 80px;
         }
 
-        & .info{
+        .info{
             width: 80%;
             font-size: 15px;
             text-align: center;
             letter-spacing: 3px; /* Espacement entre les lettres */
         }
-    }
+   
 }
 
 @media (min-width: 375px) and (max-width: 767px) {
@@ -85,21 +88,21 @@
         width: 100%;
         height: 130px;
         margin-top: 10px;
-     
+    }
 
-        & .logo {
+    .logo {
             margin-top: 5px;
             margin-bottom: 5px;
             height: 80px;
             width: 60px;
         }
 
-        & .info{
+    .info{
             font-size: 12px;
             margin-bottom: 20px;
             text-align: center;
         }
-    }
+   
 }
 
 @media (min-width: 280px) and (max-width: 374px) {
@@ -110,20 +113,21 @@
         width: 100%;
         height: 130px;
         margin-top: 10px;
+    }
      
 
-        & .logo {
+        .logo {
             margin-top: 10px;
             margin-bottom: 10px;
             height: 60px;
             width: 50px;
         }
 
-        & .info{
+        .info{
             
             font-size: 12px;
             margin-bottom: 20px;
             text-align: center;
         }
-    }
+    
 }
